fixed box overflow in landscape orientation

--- a/aboutUs/css/style.css
+++ b/aboutUs/css/style.css
@@ -114,4 +114,7 @@ a:active {color:white;}
 	p {
 		line-height: 95%;
 	}
+	#box3, #box4, #box5  {
+		top:10%;
+	}
 }
